Add error handling for invalid URL

--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -155,6 +155,7 @@
 
     <!-- Error messages, system errors -->
     <string name="error_failure_could_not_start_command">エラー：コマンドを開始できませんでした</string>
+    <string name="error_failure_could_not_open_url">エラー：URL を開くことができませんでした</string>
     <string name="error_failure_not_found_opening_application_with_class">\"%1$s\" は開くことができません。</string>
     <string name="error_failure_could_not_connect_to_the_widget">エラー：ウィジェットに接続できませんでした</string>
 
