--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -103,8 +103,8 @@
     <string name="preferences_item_advanced_main_edittext_hint_locale_english_summary">命令输入窗口使用 setImeHintLocales 并设为英语语言环境。不同的键盘输入软件有不同的行为。</string>
     <string name="preferences_item_advanced_main_edittext_flagforceascii_title">在命令输入窗口上设置 IME_FLAG_FORCE_ASCII  标志</string>
     <string name="preferences_item_advanced_main_edittext_flagforceascii_summary">IME_FLAG_FORCE_ASCII 表示打算使用 ASCII 字符进行输入。不同的键盘输入软件有不同的行为。</string>
-    <string name="preferences_item_accept_arbitrary_url">接受任意 URL scheme</string>
-    <string name="preferences_item_accept_arbitrary_url_summary">默认情况下，Blue Line Console 只接受以 http:// 和 https:// 开头的 URL 作为 URL 输入。启用选项后，将接受其他类型的 URL输入。</string>
+    <string name="preferences_item_accept_arbitrary_url">接受任意 URL 格式</string>
+    <string name="preferences_item_accept_arbitrary_url_summary">默认情况下，Blue Line Console 只接受以 http:// 和 https:// 开头的 URL 作为 URL 输入。启用选项后，将接受其他格式的 URL 作为输入。</string>
 
     <!-- Preferences items, URL screens -->
     <string name="preferences_url_add_button">添加自定义 URL 或搜索引擎</string>
