--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -65,6 +65,7 @@
     <string name="preferences_title_for_footer_home_screen_default_items">默认项目</string>
     <string name="preferences_title_for_header_and_footer_home_screen_add_widget">添加小部件</string>
     <string name="preferences_title_for_header_and_footer_widget">小部件</string>
+    <string name="preferences_title_for_header_and_footer_license">License</string>
 
     <!-- Preferences categories, main screen -->
     <string name="preferences_category_main">一般</string>
@@ -108,6 +109,7 @@
     <string name="preferences_item_accept_arbitrary_url_summary">默认情况下，Blue Line Console 只接受以 http:// 和 https:// 开头的 URL 作为 URL 输入。启用选项后，将接受其他格式的 URL 作为输入。</string>
     <string name="preferences_item_about_this_app_github_repo">GitHub 上的 Blue Line Console</string>
     <string name="preferences_item_about_this_app_github_repo_summary">访问 https://github.com/nhirokinet/bluelineconsole</string>
+    <string name="preferences_item_about_this_app_licensing_information">Licensing information</string>
 
     <!-- Preferences items, URL screens -->
     <string name="preferences_url_add_button">添加自定义 URL 或搜索引擎</string>
