--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -198,6 +198,7 @@
         \n-&#032;config
         \n-&#032;date
         \n-&#032;all_apps
+        \n-&#032;cal [&lt;month&gt; &lt;year&gt;]
         \n-&#032;bing &lt;query&gt;
         \n-&#032;duckduckgo &lt;query&gt;
         \n-&#032;google &lt;query&gt;
