--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -228,6 +228,11 @@
         \nBlue Line Console contains code from the following library, which Apache License, Version 2.0, is applied to.
         \n
         \n- Android Jetpack
+        \n- kotlinx-coroutines-android
+        \n- kotlinx-coroutines-core-jvm
+        \n- kotlin-stdlib
+        \n- JetBrains Java Annotations
+        \n- Google Guava
     </string>
 
     <!-- Legal English texts -->
