--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -96,7 +96,7 @@
     <string name="preferences_item_default_search_title">默认搜索引擎</string>
     <string name="preferences_item_default_search_summary">总是在列表的底部显示特定的搜索引擎</string>
     <string name="preferences_item_default_search_option_none">（无）</string>
-    <string name="preferences_item_custom_commands_widgets">小部件命令（实验性）</string>
+    <string name="preferences_item_custom_commands_widgets">小部件命令</string>
     <string name="preferences_item_home_screen_default_items">主屏项目</string>
     <string name="preferences_item_home_screen_default_items_summary">在 Blue Line Console 被设为启动器的情况下，当主屏幕上没有任何输入时，显示结果和小部件。</string>
     <string name="preferences_item_contacts_enable_search">启用联系人搜索</string>
@@ -129,7 +129,7 @@
 
     <!-- Preferences item, home screen default items screens -->
     <string name="preferences_home_screen_add_command_button">添加命令</string>
-    <string name="preferences_home_screen_add_widget_button">添加小部件 （实验性）</string>
+    <string name="preferences_home_screen_add_widget_button">添加小部件</string>
     <string name="preferences_home_screen_add_widget_select_message">选择要添加的小部件：</string>
     <string name="preferences_home_screen_widget_label">小部件</string>
     <string name="preferences_home_screen_command_label">命令</string>
