Follow linter suggestions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -216,7 +216,7 @@
         \n
         \n-&#032;Color code (like #4d68ff)
         \n
-        \nHint: Set up Blue Line Console as Default Assistant App from Settings &gt; Apps &amp; notfications &gt; Default Apps &gt; Assistant app or similar menu, to make Blue Line Console open on long-pressing home button.
+        \nHint: Set up Blue Line Console as Default Assistant App from Settings &gt; Apps &amp; notifications &gt; Default Apps &gt; Assistant app or similar menu, to make Blue Line Console open on long-pressing home button.
         \nHint: Blue Line Console can be launched from notification menu by always showing notification. Find the option from config command.
     </string>
 
