--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,6 +90,7 @@
     <string name="preferences_item_appearance_theme_summary">When this option is changed, Blue Line Console restarts immediately.</string>
     <string name="preferences_item_appearance_accent_color">Accent color</string>
     <string name="preferences_item_appearance_animation_title">Animation</string>
+    <string name="preferences_item_appearance_show_icons_title">Show icons</string>
     <string name="preferences_item_apps_show_package_name_title">Show package name</string>
     <string name="preferences_item_apps_show_package_name_summary">Note: You can find apps by a part of package name even this check is off.</string>
     <string name="preferences_item_display_custom_urls_title">Web pages and searches</string>
