--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -90,6 +90,7 @@
     <string name="preferences_item_appearance_theme_summary">更改此选项时，Blue Line Console 会立即重新启动。</string>
     <string name="preferences_item_appearance_accent_color">强调色</string>
     <string name="preferences_item_appearance_animation_title">动画</string>
+    <string name="preferences_item_appearance_show_icons_title">Show icons</string>
     <string name="preferences_item_apps_show_package_name_title">显示包名</string>
     <string name="preferences_item_apps_show_package_name_summary">注意:即使关闭了这个选项，你也可以通过包名的一部分找到应用程序。</string>
     <string name="preferences_item_display_custom_urls_title">网页和搜索</string>
