--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -91,6 +91,7 @@
     <string name="preferences_item_appearance_accent_color">アクセント カラー</string>
     <string name="preferences_item_appearance_animation_title">アニメーション</string>
     <string name="preferences_item_appearance_show_icons_title">アイコンを表示</string>
+    <string name="preferences_item_appearance_show_wrappers_title">Show wrappers</string>
     <string name="preferences_item_apps_show_package_name_title">パッケージ名を表示</string>
     <string name="preferences_item_apps_show_package_name_summary">註：このチェックがオフでも、パッケージ名の一部でアプリを検索できます。</string>
     <string name="preferences_item_display_custom_urls_title">URL と検索エンジンの呼び出し設定</string>
