Fix Korean translation for one item

--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -105,7 +105,7 @@
     <string name="preferences_item_advanced_main_edittext_hint_locale_english_title">명령어 입력창의 언어를 영어로 IME에 지시</string>
     <string name="preferences_item_advanced_main_edittext_hint_locale_english_summary">명령어 입력창에 setImeHintLocales 를 통해 영어 입력으로 지시합니다. IME에 따라 동작이 다릅니다.</string>
     <string name="preferences_item_advanced_main_edittext_flagforceascii_title">명령어 입력창의 IME_FLAG_FORCE_ASCII 를 유효화</string>
-    <string name="preferences_item_advanced_main_edittext_flagforceascii_summary">IME_FLAG_FORCE_ASCII는 ASCII글자 입력을 IME 에 지시하는 옵셩입니다만, IME에 따라 동작이 다릅니다.</string>
+    <string name="preferences_item_advanced_main_edittext_flagforceascii_summary">IME_FLAG_FORCE_ASCII는 ASCII문자 입력을 IME 에 지시하는 옵셩입니다만, IME에 따라 동작이 다릅니다.</string>
     <string name="preferences_item_accept_arbitrary_url">URL입력에 임의의 scheme를 허용 </string>
     <string name="preferences_item_accept_arbitrary_url_summary">디폴트라면 Blue Line Console은 http:// 와 https:// 의 scheme 만을 URL 로 인식합니다. 이 옵셩이 유효라면, 다른 schema도 입력 가능합니다.</string>
     <string name="preferences_item_about_this_app_github_repo">Blue Line Console on GitHub</string>
