--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -15,12 +15,12 @@
     <string name="calculator_error_unit_conversion_failure">\"%1$s\"을(를) \"%2$s\" (으)로 변환 할 수 없음</string>
 
     <!-- Command searcher texts for results -->
-    <string name="result_search_query_on_engine_format">%2$s (으)로 \"%1$s\" 를(을) 검색</string>
-    <string name="result_static_webpage_format">%1$s 을(를) 접근</string>
+    <string name="result_search_query_on_engine_format">%2$s (으)로 \"%1$s\"을(를) 검색</string>
+    <string name="result_static_webpage_format">%1$s을(를) 접근</string>
     <string name="result_config_summary">Blue Line Console 설정</string>
 
     <!-- Themes -->
-    <string name="theme_name_default">디폴트 (라이트나 다크, 시스템 설정)</string>
+    <string name="theme_name_default">디폴트 (라이트나 다크, 시스템 설정 기준)</string>
     <string name="theme_name_light">라이트</string>
     <string name="theme_name_dark">다크</string>
     <string name="theme_name_marine">Marine</string>
@@ -76,10 +76,10 @@
     <string name="preferences_category_home_screen">홈 화면</string>
     <string name="preferences_category_contacts">주소록</string>
     <string name="preferences_category_advanced">고급 옵션</string>
-    <string name="preferences_category_about_this_app">Blue Line Console 에 대해</string>
+    <string name="preferences_category_about_this_app">Blue Line Console</string>
 
     <!-- Preferences, titles for headers and footers -->
-    <string name="preferences_item_main_show_startup_help_title">기동 시 help을 표시</string>
+    <string name="preferences_item_main_show_startup_help_title">기동 시 help를 표시</string>
     <string name="preferences_item_main_show_startup_help_summary">"help" 명령어를 안내합니다. "help"명령어를 기억하면 무효화 하기를 추천합니다.</string>
     <string name="preferences_item_default_assist_app_title">디지털 어시스턴트 앱으로 설정</string>
     <string name="preferences_item_default_assist_app_summary">Android 설정으로 디지털 어시스턴트 앱으로 설정하면, 모든 화면에서 하위우측 스와이프나 홈 버튼 롱 클릭으로 Blue Line Console을 기동 할 수 있습니다.</string>
@@ -95,13 +95,13 @@
     <string name="preferences_item_apps_show_package_name_summary">이 옵셩이 off에도 package name으로 앱을 검색 할 수 있습니다.</string>
     <string name="preferences_item_display_custom_urls_title">URL와 검석 엔진 설정</string>
     <string name="preferences_item_default_search_title">디폴트 검색 엔진</string>
-    <string name="preferences_item_default_search_summary">설정된 검색 엔진으로의 웹 검색을 상시 결과로 표시합니다.</string>
+    <string name="preferences_item_default_search_summary">설정된 검색 엔진으로의 웹 검색을 결과로 표시합니다.</string>
     <string name="preferences_item_default_search_option_none">(없음)</string>
     <string name="preferences_item_custom_commands_widgets">위젯 명령어</string>
     <string name="preferences_item_home_screen_default_items">홈 화면 항목</string>
-    <string name="preferences_item_home_screen_default_items_summary">홈 화면으로 기동하고 명령어가 입력되지 않는 경우 표시할 항목을 설정합니다.</string>
+    <string name="preferences_item_home_screen_default_items_summary">홈 화면으로 기동하고 명령어가 입력되지 않는 경우 표시될 항목을 설정합니다.</string>
     <string name="preferences_item_contacts_enable_search">주소록 검색</string>
-    <string name="preferences_item_contacts_search_permission_explanation">유효화하기 위해 구소록 접근 권한이 필요합니다. 별도 허용 조작이 필요할 수 있습니다.</string>
+    <string name="preferences_item_contacts_search_permission_explanation">유효화하기 위해는 구소록 접근 권한이 필요합니다. 별도 허용 조작이 필요할 수 있습니다.</string>
     <string name="preferences_item_advanced_main_edittext_hint_locale_english_title">명령어 입력창의 언어를 영어로 IME에 지시</string>
     <string name="preferences_item_advanced_main_edittext_hint_locale_english_summary">명령어 입력창에 setImeHintLocales 를 통해 영어 입력으로 지시합니다. IME에 따라 동작이 다릅니다.</string>
     <string name="preferences_item_advanced_main_edittext_flagforceascii_title">명령어 입력창의 IME_FLAG_FORCE_ASCII 를 유효화</string>
@@ -120,13 +120,13 @@
     <string name="preferences_url_column_has_query">검색 엔진 (켜면 쿼리가 URL 끝에 추가됩니다)</string>
     <string name="preferences_url_property_enabled">켬</string>
     <string name="preferences_url_property_disabled">끔</string>
-    <string name="preferences_url_property_preset">Preset</string>
+    <string name="preferences_url_property_preset">프리셋</string>
     <string name="preferences_url_varies_with_locale">언어 설정을 변경하시면 이 설정도 변경됨</string>
 
     <!-- Preferences items, accent color screens -->
     <string name="preferences_accent_color_theme_default">테마 디폴트</string>
     <string name="preferences_accent_color_custom">섹 설정</string>
-    <string name="preferences_accent_color_theme_without_accent_color">현제의 테마 (%1$s)에면 억센트 컬러를 면경할 수 없습니다.</string>
+    <string name="preferences_accent_color_theme_without_accent_color">현제의 테마 (%1$s)에면 억센트 컬러를 설정할 수 없습니다.</string>
 
     <!-- Preferences item, home screen default items screens -->
     <string name="preferences_home_screen_add_command_button">명령어 추가하기</string>
@@ -146,8 +146,8 @@
     <string name="preferences_command_widget_command_new_label">신규 위젯 명령어</string>
     <string name="preferences_command_widget_command_save_and_select_widget">저장하고 위젯을 선택</string>
     <string name="preferences_command_widget_command_command">명령어</string>
-    <string name="preferences_command_widget_command_abbreviation">명령어의 일부만에도 마칭</string>
-    <string name="preferences_command_widget_command_abbreviable_label">단추 가능</string>
+    <string name="preferences_command_widget_command_abbreviation">명령어의 일부만에도 매칭</string>
+    <string name="preferences_command_widget_command_abbreviable_label">단축 가능</string>
 
     <!-- Contact search -->
     <string name="contacts_action_dial_phone_number">전화: %1$s</string>
@@ -155,15 +155,15 @@
 
     <!-- Error messages, user errors -->
     <string name="error_invalid_url_least_validation_for_web">URL 포맷 부정: https:// 나 http:// 로 시작해, 더 하나 이상 슬래시(\"/\")를 포함할 필요가 있습니다</string>
-    <string name="error_invalid_url_least_validation_for_web_arbitrary_schema">URL 포맷 부장: &lt;scheme&gt;:// 로 시작해. 더 하나 이상 슬래시(\"/\")를 포함할 필요가 있습니다</string>
+    <string name="error_invalid_url_least_validation_for_web_arbitrary_schema">URL 포맷 부장: &lt;scheme&gt;:// 로 시작해, 더 하나 이상 슬래시(\"/\")를 포함할 필요가 있습니다</string>
     <string name="error_invalid_command_name">명령어는 스페이스를 포함할 수 없이, 1 글자 이상인 필요가 있습니다.</string>
-    <string name="error_empty_display_name">표시 일임은 입력되지 않습니다.</string>
+    <string name="error_empty_display_name">표시 이름은 입력되지 않습니다.</string>
 
     <!-- Error messages, system errors -->
     <string name="error_failure_could_not_start_command">오류: 명령어를 시작할 수 없었습니다.</string>
-    <string name="error_failure_could_not_open_url">오류: URL 을 열을 수 없었습니다.</string>
-    <string name="error_failure_not_found_opening_application_with_class">\"%1$s\" 을(를) 열 수 없습니다.</string>
-    <string name="error_failure_could_not_connect_to_the_widget">오류: 위젯을 열결할 수 없었습니다.</string>
+    <string name="error_failure_could_not_open_url">오류: URL을 열 수 없었습니다.</string>
+    <string name="error_failure_not_found_opening_application_with_class">\"%1$s\"을(를) 열 수 없습니다.</string>
+    <string name="error_failure_could_not_connect_to_the_widget">오류: 위젯을 연결할 수 없었습니다.</string>
 
     <!-- Error messages, app internal errors -->
     <string name="error_calculator_internal_error">계산기 오류</string>
@@ -177,9 +177,9 @@
 
     <!-- Migration message -->
     <string name="migration_lost_happened_message">
-        Blue Line Console 위부에 데이트 원북이 실시된 것 같습니다.
+        Blue Line Console 위부에 데이트 원복이 실시된 것 같습니다.
         \n
-        \n위젯 관련 설정이 상실된 가능성이 있습니다. 필요하면 config 명령어에서 다시 설정하십시오.
+        \n위젯 관련 설정이 상실된 가능성이 있습니다. 필요하면 config 명령어로 다시 설정하십시오.
     </string>
 
     <!-- Help -->
@@ -209,7 +209,7 @@
         \n
         \n네트워크 관리 명령어：
         \n
-        \n-&#032;ping &lt;host&gt;, ping6 &lt;host&gt; (지원된 시스템 만)
+        \n-&#032;ping &lt;host&gt;, ping6 &lt;host&gt; (지원된 시스템 만 사용 가능)
         \n
         \n기타 명령어:
         \n
