--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,14 +5,14 @@
     <!-- ActivityMain -->
     <string name="displayedFullVersionString">Version %1$s</string>
     <string name="loading_main_caption">Refreshing database&#8230;</string>
-    <string name="loading_detail_for_command_search">On first launch, or on first launch after changing language setting,\nrefreshing may take a while (sometimes tens of seconds).</string>
+    <string name="loading_detail_for_command_search">On first launch, or on first launch after changing language setting,\nrefreshing may take a while</string>
 
     <!-- Calculators -->
-    <string name="calculator_precision_format">Calculation Precision: %1$s</string>
-    <string name="calculator_precision_no_error">No Error</string>
+    <string name="calculator_precision_format">Calculation precision: %1$s</string>
+    <string name="calculator_precision_no_error">No error</string>
     <string name="calculator_precision_rounding">Half rounding up while calculation</string>
     <string name="calculator_error_division_by_zero">Division by 0</string>
-    <string name="calculator_error_unit_conversion_failure">Cannot convert \"%1$s\" to \"%2$s\"</string>
+    <string name="calculator_error_unit_conversion_failure">Can\'t convert \"%1$s\" to \"%2$s\"</string>
 
     <!-- Command searcher texts for results -->
     <string name="result_search_query_on_engine_format">Search \"%1$s\" on %2$s</string>
@@ -20,18 +20,18 @@
     <string name="result_config_summary">Preferences for Blue Line Console</string>
 
     <!-- Themes -->
-    <string name="theme_name_default">Default (Light or Dark, according to system setting)</string>
+    <string name="theme_name_default">Follow system/string>
     <string name="theme_name_light">Light</string>
     <string name="theme_name_dark">Dark</string>
     <string name="theme_name_marine">Marine</string>
-    <string name="theme_name_old_computer">Old Computer</string>
+    <string name="theme_name_old_computer">Old computer</string>
 
     <!-- Widgets -->
     <string name="widget_launcher_label">Blue Line Console shortcut</string>
 
     <!-- String match strategies -->
     <string name="string_match_strategy_substring">Normal</string>
-    <string name="string_match_strategy_skipped_substring">Skipped substring (e.g. \"abd\" for \"abcdef\")</string>
+    <string name="string_match_strategy_skipped_substring">Skipped substring (e.g. \"abd\" </string>
 
     <!-- Notification for OS -->
     <string name="notification_launch_this_app">Launch Blue Line Console</string>
@@ -52,39 +52,39 @@
     <string name="rgb_color_display">RGB (Red:%1$d, Green:%2$d, Blue:%3$d)</string>
 
     <!-- Preferences general notes -->
-    <string name="note_take_effect_after_restart">This setting takes effect after restarting Blue Line Console.</string>
+    <string name="note_take_effect_after_restart">This setting takes effect after restarting Blue Line Console</string>
 
     <!-- Preferences, titles for headers and footers -->
     <string name="preferences_title_for_header_and_footer">Configuration</string>
     <string name="preferences_title_for_header_and_footer_url">URL</string>
     <string name="preferences_title_for_header_and_footer_add_custom_urls">Add URL</string>
     <string name="preferences_title_for_header_and_footer_edit_custom_urls">Edit URL</string>
-    <string name="preferences_title_for_header_and_footer_widget_commands">Widget Commands</string>
-    <string name="preferences_title_for_header_and_footer_accent_color">Accent Color</string>
-    <string name="preferences_title_for_header_home_screen_default_items">Home Screen</string>
-    <string name="preferences_title_for_footer_home_screen_default_items">Default Items</string>
-    <string name="preferences_title_for_header_and_footer_home_screen_add_widget">Add Widget</string>
+    <string name="preferences_title_for_header_and_footer_widget_commands">Widget commands</string>
+    <string name="preferences_title_for_header_and_footer_accent_color">Accent color</string>
+    <string name="preferences_title_for_header_home_screen_default_items">Home screen</string>
+    <string name="preferences_title_for_footer_home_screen_default_items">Default items</string>
+    <string name="preferences_title_for_header_and_footer_home_screen_add_widget">Add widget</string>
     <string name="preferences_title_for_header_and_footer_widget">Widget</string>
     <string name="preferences_title_for_header_and_footer_license">License</string>
 
     <!-- Preferences categories, main screen -->
     <string name="preferences_category_main">General</string>
     <string name="preferences_category_appearance">Appearance</string>
-    <string name="preferences_category_apps">Launching Apps</string>
-    <string name="preferences_category_urls">Web Pages and Searches</string>
+    <string name="preferences_category_apps">Launching apps</string>
+    <string name="preferences_category_urls">Webpages and searches</string>
     <string name="preferences_category_custom_commands">Custom commands</string>
-    <string name="preferences_category_home_screen">Home Screen</string>
+    <string name="preferences_category_home_screen">Home screen</string>
     <string name="preferences_category_contacts">Contacts</string>
     <string name="preferences_category_advanced">Advanced</string>
     <string name="preferences_category_about_this_app">About</string>
 
     <!-- Preferences items, main screen -->
     <string name="preferences_item_main_show_startup_help_title">Show help on startup</string>
-    <string name="preferences_item_main_show_startup_help_summary">This option just shows you the guidance for help command. It is better to disable this option once you remembered "help" command.</string>
+    <string name="preferences_item_main_show_startup_help_summary">Shows the guidance for help command. It is recommended to disable this option once you remember the "help" command</string>
     <string name="preferences_item_default_assist_app_title">Set as default assistant app</string>
-    <string name="preferences_item_default_assist_app_summary">To open Blue Line Console by long-pressing home button everywhere, set it as default assistant app from setting menu.</string>
-    <string name="preferences_item_main_always_show_notification_title">Always show icon as notification</string>
-    <string name="preferences_item_main_always_show_notification_summary">Always show the notification icon to start Blue Line Console everywhere.</string>
+    <string name="preferences_item_default_assist_app_summary">To open Blue Line Console by long-pressing the home button anywhere, set it as default assistant app from the settings menu</string>
+    <string name="preferences_item_main_always_show_notification_title">Always show a notification</string>
+    <string name="preferences_item_main_always_show_notification_summary">Always show a notification that can start Blue Line Console anywhere</string>
     <string name="preferences_item_text_match_strategy_title">Text search matching style</string>
     <string name="preferences_item_appearance_theme_title">Theme</string>
     <string name="preferences_item_appearance_theme_summary">When this option is changed, Blue Line Console restarts immediately.</string>
@@ -92,16 +92,16 @@
     <string name="preferences_item_appearance_animation_title">Animation</string>
     <string name="preferences_item_appearance_show_icons_title">Show icons</string>
     <string name="preferences_item_apps_show_package_name_title">Show package name</string>
-    <string name="preferences_item_apps_show_package_name_summary">Note: You can find apps by a part of package name even this check is off.</string>
-    <string name="preferences_item_display_custom_urls_title">Web pages and searches</string>
-    <string name="preferences_item_default_search_title">Default Search Engine</string>
-    <string name="preferences_item_default_search_summary">Always show specific search engine on the bottom of list</string>
-    <string name="preferences_item_default_search_option_none">(None)</string>
+    <string name="preferences_item_apps_show_package_name_summary">Note: You can find apps with a part of their package name even if this option is turned off</string>
+    <string name="preferences_item_display_custom_urls_title">Webpages and searches</string>
+    <string name="preferences_item_default_search_title">Default search engine</string>
+    <string name="preferences_item_default_search_summary">Always show a specific search engine on the bottom of list</string>
+    <string name="preferences_item_default_search_option_none">None</string>
     <string name="preferences_item_custom_commands_widgets">Widget commands</string>
     <string name="preferences_item_home_screen_default_items">Home screen items</string>
     <string name="preferences_item_home_screen_default_items_summary">Display results and widgets when nothing is input at home screen, when Blue Line Console is set to home app.</string>
     <string name="preferences_item_contacts_enable_search">Enable contacts search</string>
-    <string name="preferences_item_contacts_search_permission_explanation">Enabling contacts search requires permission to read Contacts. You may be asked to grant the access to Contacts.</string>
+    <string name="preferences_item_contacts_search_permission_explanation">Enabling contacts search requires the permission to access contacts. You may be asked to grant the access to contacts.</string>
     <string name="preferences_item_advanced_main_edittext_hint_locale_english_title">Notify English input to keyboard input software on command input window</string>
     <string name="preferences_item_advanced_main_edittext_hint_locale_english_summary">Command input window uses setImeHintLocales and sets to English locale. Behavior differs between keyboard input softwares.</string>
     <string name="preferences_item_advanced_main_edittext_flagforceascii_title">Set IME_FLAG_FORCE_ASCII flag on command input window</string>
@@ -109,7 +109,7 @@
     <string name="preferences_item_accept_arbitrary_url">Accept arbitrary scheme for URL</string>
     <string name="preferences_item_accept_arbitrary_url_summary">By default, Blue Line Console accepts only URL starting with http:// and https:// as URL input. By enabling option, other schemes are also accepted as URL input.</string>
     <string name="preferences_item_about_this_app_github_repo">Blue Line Console on GitHub</string>
-    <string name="preferences_item_about_this_app_github_repo_summary">Access https://github.com/nhirokinet/bluelineconsole</string>
+    <string name="preferences_item_about_this_app_github_repo_summary">Open https://github.com/nhirokinet/bluelineconsole</string>
     <string name="preferences_item_about_this_app_licensing_information">Licensing information</string>
 
     <!-- Preferences items, URL screens -->
@@ -137,8 +137,8 @@
 
     <!-- Preferences item, widgets related messages -->
     <string name="preferences_widget_height_px">Height (px)</string>
-    <string name="preferences_widget_minimum_height_show">Minimum Height: %1$d px</string>
-    <string name="preferences_widget_default_height_show">Default Height: %1$d px</string>
+    <string name="preferences_widget_minimum_height_show">Minimum height: %1$d px</string>
+    <string name="preferences_widget_default_height_show">Default height: %1$d px</string>
     <string name="preferences_widget_configure_the_widget">Configure the widget</string>
 
     <!-- Preferences item, widget commands related messages -->
@@ -151,7 +151,7 @@
 
     <!-- Contact search -->
     <string name="contacts_action_dial_phone_number">Dial: %1$s</string>
-    <string name="contacts_action_email">E-mail: %1$s</string>
+    <string name="contacts_action_email">Email: %1$s</string>
 
     <!-- Error messages, user errors -->
     <string name="error_invalid_url_least_validation_for_web">Invalid URL: must start with https:// or http:// and at least one more slash (\"/\").</string>
@@ -160,19 +160,19 @@
     <string name="error_empty_display_name">Display name is empty</string>
 
     <!-- Error messages, system errors -->
-    <string name="error_failure_could_not_start_command">ERROR: could not start command</string>
-    <string name="error_failure_could_not_open_url">ERROR: could not open URL</string>
-    <string name="error_failure_not_found_opening_application_with_class">\"%1$s\" is not a launchable package.</string>
-    <string name="error_failure_could_not_connect_to_the_widget">ERROR: could not connect to the widget</string>
+    <string name="error_failure_could_not_start_command">Error: Couldn\'t start command</string>
+    <string name="error_failure_could_not_open_url">Error: Couldn\'t not open URL</string>
+    <string name="error_failure_not_found_opening_application_with_class">\"%1$s\" is not a launchable package</string>
+    <string name="error_failure_could_not_connect_to_the_widget">Error: Couldn\'t connect to the widget</string>
 
     <!-- Error messages, app internal errors -->
     <string name="error_calculator_internal_error">Unknown calculator internal error</string>
 
     <!-- Startup Help Activity -->
     <string name="startup_help_title_for_header_and_footer">Notification</string>
-    <string name="startup_help_title">About help command</string>
+    <string name="startup_help_title">About the help command</string>
     <string name="startup_help_body_part1">To show usage, enter</string>
-    <string name="startup_help_body_part2" translatable="false">help</string>
+    <string name="startup_help_body_part2" translatable="false">"help"</string>
     <string name="startup_help_body_part3">to see what to do.</string>
     <string name="startup_help_check_never_later">Don\'t show this message again</string>
 
@@ -206,7 +206,7 @@
         \n-&#032;wikipedia &lt;query&gt;
         \n-&#032;yahoo &lt;query&gt;
         \n
-        \nName for search engine name can be abbreviated.
+        \nThe name for a search engine can be abbreviated.
         \nFor example, \"d somequery\" is equivalent to \"duckduckgo somequery\".
         \n
         \nNetwork administrative commands:
@@ -217,8 +217,8 @@
         \n
         \n-&#032;Color code (like #4d68ff)
         \n
-        \nHint: Set up Blue Line Console as Default Assistant App from Settings &gt; Apps &amp; notifications &gt; Default Apps &gt; Assistant app or similar menu, to make Blue Line Console open on long-pressing home button.
-        \nHint: Blue Line Console can be launched from notification menu by always showing notification. Find the option from config command.
+        \nHint: Set Blue Line Console as the default assistant app from Settings &gt; Apps &gt; Default apps &gt; Digital assistant app or a similar menu, to make Blue Line Console open on long-pressing home button.
+        \nHint: Blue Line Console can be launched from notification menu by always showing notification. Find the option from the "config" command.
     </string>
 
     <!-- Licensing information, untranslatable not to make slightest difference -->
